[gd_scene load_steps=14 format=3 uid="uid://cygfon0h3l20j"]

[ext_resource type="PackedScene" uid="uid://b58ty53ksowmq" path="res://scenes/outside.tscn" id="1_jbb1h"]
[ext_resource type="Script" path="res://scripts/tutorial.gd" id="1_qsx2a"]
[ext_resource type="PackedScene" uid="uid://dfywlhuf8sf7q" path="res://scenes/player.tscn" id="2_tben5"]
[ext_resource type="PackedScene" uid="uid://dep7866ey2ofj" path="res://scenes/bigguy.tscn" id="3_moyf8"]
[ext_resource type="PackedScene" uid="uid://crwm0eje72v0o" path="res://scenes/battle_hud.tscn" id="4_j0wuq"]
[ext_resource type="Texture2D" uid="uid://cid57divpsw4v" path="res://assets/neonhatsign.png" id="6_k21yg"]
[ext_resource type="FontFile" uid="uid://6r4en7vwb2ts" path="res://fonts/Retro Gaming.ttf" id="7_6nhj2"]
[ext_resource type="Texture2D" uid="uid://cn8hbajm5m23l" path="res://assets/ui/e.png" id="8_qr4ko"]
[ext_resource type="Texture2D" uid="uid://7sdsudutiwut" path="res://assets/ui/epressed.png" id="9_4jrut"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kwvj2"]
b = Vector2(0, 179)

[sub_resource type="Animation" id="Animation_c63at"]
resource_name = "step_1"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0pedl"]
_data = {
"step_1": SubResource("Animation_c63at")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_n5f23"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_qr4ko")
}, {
"duration": 1.0,
"texture": ExtResource("9_4jrut")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Tutorial" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_qsx2a")

[node name="Outside" parent="." instance=ExtResource("1_jbb1h")]

[node name="Neonhatsign" type="Sprite2D" parent="."]
position = Vector2(34.3333, 93)
texture = ExtResource("6_k21yg")
offset = Vector2(-5, -16.6667)

[node name="Neonhatsign2" type="Sprite2D" parent="."]
position = Vector2(297.666, 93)
texture = ExtResource("6_k21yg")
offset = Vector2(-5, -16.6667)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1.66667, 0.333333)
shape = SubResource("SegmentShape2D_kwvj2")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(317.667, -1.33333)
shape = SubResource("SegmentShape2D_kwvj2")

[node name="BigGuy" parent="." instance=ExtResource("3_moyf8")]
z_index = 1
position = Vector2(169.333, 120)

[node name="Player" parent="." instance=ExtResource("2_tben5")]
position = Vector2(91.6667, 121)
scale = Vector2(1, 1)
speed = 1

[node name="BattleHUD" parent="." instance=ExtResource("4_j0wuq")]
visible = false
offset_left = 0.0
offset_top = 0.0
offset_right = 960.0
offset_bottom = 540.0
scale = Vector2(0.333, 0.333)

[node name="TutorialLabels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_bottom = -1.0

[node name="Step" type="RichTextLabel" parent="TutorialLabels"]
layout_mode = 0
offset_left = 48.0
offset_top = 5.0
offset_right = 515.0
offset_bottom = 156.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/normal_font = ExtResource("7_6nhj2")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[center] This is a \"Hat Dispute\", where you battle an opponent for the right of their HAT"

[node name="Start" type="Button" parent="."]
visible = false
offset_left = 126.667
offset_top = 138.333
offset_right = 345.667
offset_bottom = 174.333
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("7_6nhj2")
theme_override_font_sizes/font_size = 22
text = "Start Tutorial"

[node name="Skip" type="Button" parent="."]
visible = false
offset_left = 127.0
offset_top = 158.667
offset_right = 346.0
offset_bottom = 194.667
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("7_6nhj2")
theme_override_font_sizes/font_size = 22
text = "Skip Tutorial"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0pedl")
}

[node name="InteractButton" type="AnimatedSprite2D" parent="."]
position = Vector2(160.667, 90)
sprite_frames = SubResource("SpriteFrames_n5f23")
frame_progress = 0.841659
speed_scale = 0.5

[connection signal="button_up" from="Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="Skip" to="." method="_on_skip_button_up"]
